kubernetes/llama-stack/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llamastack-deployment
  labels:
    app.kubernetes.io/part-of: llama-stack
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"crm-mcp-server"},{"apiVersion":"apps/v1","kind":"Deployment","name":"pdf-mcp-server"},{"apiVersion":"apps/v1","kind":"Deployment","name":"slack-mcp-server"},{"apiVersion":"apps/v1","kind":"Deployment","name":"upload-mcp-server"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llamastack
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llamastack
    spec:
      volumes:
        - name: run-config-volume
          configMap:
            name: run-config
            defaultMode: 420
        - name: llama-persist
          persistentVolumeClaim:
            claimName: llama-persist
        - name: cache
          emptyDir: {}
        - name: pythain
          emptyDir: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: llamastack
          ports:
            - containerPort: 8321
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: pythain
              mountPath: /pythainlp-data
            - name: run-config-volume
              mountPath: /app-config
            - name: llama-persist
              mountPath: /.llama
            - name: cache
              mountPath: /.cache
          terminationMessagePolicy: File
          image: 'llamastack/distribution-remote-vllm:0.2.12'
          args:
            - '--config'
            - /app-config/config.yaml
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
